--- a/sejal.html
+++ b/sejal.html
@@ -10,17 +10,21 @@
 
 <body class="sejal-theme">
     <div class="journal">
-        <h2>Dear Sejal 🧸</h2>
+        <h2> </h2>
         <div class="page">Page 1: </div>
         <div class="page">Page 2: </div>
         <div class="page">Page 3: </div>
         <div class="page">Page 4: </div>
+        <br>
         <button onclick="nextPage()">Next Page ➡️</button>
     </div>
     <div id="controls">
         <button id="prevBtn" onclick="prevPage()">⟵ Previous Page</button>
 
     </div>
+    <br>
+    <button onclick="goHome()" id="homeBtn">🏠 Home</button>
+
 
     <script src="script.js"></script>
 </body>
