--- a/taran.html
+++ b/taran.html
@@ -15,6 +15,7 @@
         <div class="page">Page 2: </div>
         <div class="page">Page 3: </div>
         <div class="page">Page 4: </div>
+        <br>
         <button onclick="nextPage()">Next Page ⟶ </button>
     </div>
 
@@ -22,6 +23,9 @@
         <button id="prevBtn" onclick="prevPage()">⟵ Previous Page</button>
 
     </div>
+    <br>
+    <button onclick="goHome()" id="homeBtn">🏠 Home</button>
+
 
     <script src="script.js"></script>
 </body>
